TEST-8 Added UserProperty and Injected to UserService